exports[`test Email field matches previous snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 10,
      }
    }>
     
  </Text>
  <TextInput
    keyboardType="email-address"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Email"
    returnKeyType="next"
    value="" />
</View>
`;

exports[`test Name field matches previous snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 10,
      }
    }>
     
  </Text>
  <TextInput
    keyboardType="default"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Name"
    returnKeyType="next"
    value="" />
</View>
`;

exports[`test Phone field matches previous snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 10,
      }
    }>
     
  </Text>
  <TextInput
    keyboardType="phone-pad"
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Mobile"
    returnKeyType="done"
    value="" />
</View>
`;
